<resources>
    <string name="app_name" translatable="false">KaisenApp</string>
    <string name="film_plot">Trama</string>
    <string name="recommendation">Simili</string>
    <string name="sample" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque laoreet tincidunt lorem, nec eleifend urna faucibus quis. Proin efficitur ex quis dolor vulputate porta. In hac habitasse platea dictumst. In laoreet venenatis lorem in porta. Aenean metus tortor, dignissim nec imperdiet at, cursus sit amet nulla. Suspendisse sapien ex, tincidunt at dui id, lobortis commodo elit. Mauris feugiat at metus sit amet feugiat. Phasellus sed tortor leo. In hac habitasse platea dictumst. Vestibulum at feugiat mauris. Suspendisse placerat, tortor ac finibus tempor, mi odio malesuada nibh, sit amet imperdiet sapien metus eget arcu. Donec ut metus interdum, ornare erat id, volutpat ligula. Duis eu tellus mi. Mauris convallis, risus quis hendrerit consectetur, tortor erat feugiat nisl, non accumsan risus eros eu massa. In hac habitasse platea dictumst.</string>
    <string name="contentDescriptionWallpaper" translatable="false">Wallpaper</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="home" translatable="false">Home</string>
    <string name="search_movies">Search</string>
    <string name="profile">Account</string>
    <string name="upcoming" translatable="false">Upcoming</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="cerca">Cerca un film o una serie</string>
    <string name="title">Titolo</string>
    <string name="genres">Generi :</string>
    <string name="originalTitle">Titolo Originale :</string>
    <string name="seasons">Stagioni</string>



    <string name="animazione">ANIMAZIONE</string>
    <string name="avventura" translatable="false">AVVENTURA</string>
    <string name="azione" translatable="false">AZIONE</string>
    <string name="crime" translatable="false">CRIME</string>
    <string name="commedia" translatable="false">COMMEDIA</string>
    <string name="documentario" translatable="false">DOCUMENTARIO</string>
    <string name="dramma" translatable="false">DRAMMA</string>
    <string name="famiglia" translatable="false">FAMIGLIA</string>
    <string name="fantascienza" translatable="false">FANTASCIENZA</string>
    <string name="musica" translatable="false">MUSICA</string>
    <string name="fantasy" translatable="false">FANTASY</string>
    <string name="guerra" translatable="false">GUERRA</string>
    <string name="horror" translatable="false">HORROR</string>
    <string name="mistero" translatable="false">MISTERO</string>
    <string name="romance" translatable="false">ROMANCE</string>
    <string name="storia" translatable="false">STORIA</string>
    <string name="thriller" translatable="false">THRILLER</string>
    <string name="western" translatable="false">WESTERN</string>

    <string name="search_bar" translatable="false">  Cerca un film o una serie tv</string>
    <string name="generi" translatable="false">GENERI</string>
</resources>