<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ui.SeriesSpec"
    android:background="@color/black"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        tools:context=".ui.MainActivity">

        <LinearLayout
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:background="@null"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
                    tools:ignore="SpeakableTextPresentCheck"
                    tools:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
                    app:tint="@color/white" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/film_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textFontWeight="800"
                    android:textSize="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"

                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:srcCompat="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"

                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:text="Durata :"
                            android:textColor="@color/white"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/durata"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:text="133 min"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/GenresTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/genres"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:paddingLeft="15dp"/>

                    <TextView
                        android:id="@+id/Genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="30dp"
                        android:paddingVertical="10dp"
                        android:text="test,testdadsadasdasasdadasasdadad,test,test,test,testtes,testestsetestegsggesgdgesdgesdgesdgesdgesdgesdgetest,test"
                        android:textColor="@color/white"
                        android:textSize="15sp"

                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        >

                        <ImageButton
                            android:id="@+id/bookmarked"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:background="@color/fui_transparent"
                            app:srcCompat="@drawable/watched_border"
                            tools:srcCompat="@drawable/watched_border" />

                        <ImageButton
                            android:id="@+id/favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:background="@color/fui_transparent"
                            app:srcCompat="@drawable/saved_border" />

                        <ImageButton
                            android:id="@+id/star"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:background="@color/fui_transparent"
                            app:srcCompat="@drawable/favourite_border" />
                    </LinearLayout>

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="7dp"
                        android:backgroundTint="#fd1212"
                        android:clickable="false"
                        android:numStars="5"
                        android:progressBackgroundTint="#fd1212"
                        android:progressTint="#fd1212"
                        android:rating="2.45"
                        android:secondaryProgressTint="@color/fui_transparent"
                        android:stepSize="0.01"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/OriginalTitleT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/originalTitle"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/OriginalTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:text="test"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/film_plot"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textFontWeight="800"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:text="@string/sample"
                android:paddingVertical="10dp"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seasons"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textFontWeight="800"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/seasons"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                app:layout_constraintHorizontal_bias="0.01"
                android:orientation="horizontal"

                />

            <TextView
                android:id="@+id/layoutSimilar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommendation"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textFontWeight="800"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/similar"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                app:layout_constraintHorizontal_bias="0.01"
                android:orientation="horizontal"

                />


        </LinearLayout>

    </LinearLayout>

</ScrollView>